[package]
description = "Re:Earth Flow common library"
name = "reearth-flow-common"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
home = "0.5.9"
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
tokio-stream.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
