[package]
description = "Re:Earth Flow common library"
name = "reearth-flow-common"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
home = "0.5.9"
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
