[package]
name = "reearth-flow-config"
description = "Re:Earth Flow configuration"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
eyre.workspace = true
serde_json.workspace = true
once_cell = "1.19"
regex = "1.10"
serde_regex = "1.1"
serde.workspace = true
thiserror.workspace = true
toml = { version = "0.8", features = ["preserve_order"] }
toml_edit = "0.21"
tracing.workspace = true
walkdir = "2.4"

[dev-dependencies]
pretty_assertions.workspace = true
