[package]
description = "Re:Earth Flow eval expr library"
name = "reearth-flow-eval-expr"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
rhai = {version = "1.17.1", features = ["internals", "sync"]}
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
