[package]
description = "Re:Earth Flow state library"
name = "reearth-flow-state"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
reearth-flow-common.workspace = true

fs4 = "0.7.0"
parking_lot.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true
