[package]
description = "Re:Earth Flow storage library"
name = "reearth-flow-storage"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
futures = "0.3.30"
itertools.workspace = true
object_store = "0.9.0"
opendal.workspace = true
reearth-flow-common.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tempfile = "3"
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
