[package]
name = "reearth-flow-telemetry"
description = "Re:Earth Flow telemetry library"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
time = { version = "0.3.31", features = ["formatting"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
time = { version = "0.3.31", features = ["parsing", "macros"] }
