[package]
name = "reearth-flow-worker"
description = "Re:Earth Flow Worker"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "reearth-flow-worker"
path = "bin/main.rs"

[build-dependencies]
vergen = { version = "8", default-features = false, features = ["build", "git", "git2"] }

[dependencies]
eyre.workspace = true
async-trait = "0.1"
clap = { version = "4.4", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.4"
clap_complete_fig = "4.4"
dialoguer = { version = "0.11", default-features = false }
dunce = "1.0"
futures = "0.3"
hex.workspace = true
indicatif = "0.17"
itertools.workspace = true
once_cell = "1.19"
parking_lot = "0.12"
regex = { version = "1", default-features = false }
semver = "1.0"
serde.workspace = true
serde_json.workspace = true
solang-parser.workspace = true
tokio = { version = "1.35", features = ["time"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
anvil.workspace = true
criterion = "0.5"
globset = "0.4"
paste = "1.0"
pretty_assertions.workspace = true

[[bench]]
name = "test"
harness = false
