[package]
description = "Re:Earth Flow workflow runner"
name = "reearth-flow-workflow-runner"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
reearth-flow-action.workspace = true
reearth-flow-common.workspace = true
reearth-flow-eval-expr.workspace = true
reearth-flow-storage.workspace = true
reearth-flow-workflow.workspace = true

anyhow.workspace = true
async-recursion = "1.0.5"
eyre.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
bytes.workspace = true
pretty_assertions.workspace = true
