[package]
description = "Re:Earth Flow cli"
name = "reearth-flow-cli"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "reearth-flow"
path = "src/main.rs"

[dependencies]
reearth-flow-action-log.workspace = true
reearth-flow-action-plateau-processor.workspace = true
reearth-flow-action-processor.workspace = true
reearth-flow-action-sink.workspace = true
reearth-flow-action-source.workspace = true
reearth-flow-action-wasm-processor.workspace = true
reearth-flow-common.workspace = true
reearth-flow-runner.workspace = true
reearth-flow-runtime.workspace = true
reearth-flow-state.workspace = true
reearth-flow-storage.workspace = true
reearth-flow-telemetry.workspace = true
reearth-flow-types.workspace = true

bytes.workspace = true
clap.workspace = true
colored.workspace = true
directories.workspace = true
indoc.workspace = true
json-subscriber.workspace = true
num_cpus.workspace = true
once_cell.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
