[package]
description = "Re:Earth Flow worker"
name = "reearth-flow-worker"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "reearth-flow-worker"
path = "src/main.rs"

[dependencies]
reearth-flow-action-log.workspace = true
reearth-flow-action-plateau-processor.workspace = true
reearth-flow-action-processor.workspace = true
reearth-flow-action-sink.workspace = true
reearth-flow-action-source.workspace = true
reearth-flow-common.workspace = true
reearth-flow-runner.workspace = true
reearth-flow-runtime.workspace = true
reearth-flow-state.workspace = true
reearth-flow-storage.workspace = true
reearth-flow-telemetry.workspace = true
reearth-flow-types.workspace = true

clap = { workspace = true, features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
once_cell.workspace = true
reqwest.workspace = true
tokio.workspace = true
uuid.workspace = true
