[package]
description = "Re:Earth Flow worker"
name = "reearth-flow-worker"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "reearth-flow-worker"
path = "src/main.rs"

[dependencies]
reearth-flow-action-log.workspace = true
reearth-flow-action-plateau-processor.workspace = true
reearth-flow-action-processor.workspace = true
reearth-flow-action-python-processor.workspace = true
reearth-flow-action-sink.workspace = true
reearth-flow-action-source.workspace = true
reearth-flow-common.workspace = true
reearth-flow-runner.workspace = true
reearth-flow-runtime.workspace = true
reearth-flow-state.workspace = true
reearth-flow-storage.workspace = true
reearth-flow-telemetry.workspace = true
reearth-flow-types.workspace = true

async-trait.workspace = true
backon = "1.5.1"
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
google-cloud-googleapis = "0.15.0"
google-cloud-pubsub = "0.29.1"
json-subscriber.workspace = true
num_cpus.workspace = true
nutype.workspace = true
object_store.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
walkdir.workspace = true
