[package]
description = "Re:Earth Flow worker"
name = "reearth-flow-worker"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
# Temporary migration flag for the new-geometry migration.
# TODO: Remove after migration.
new-geometry = [
  "reearth-flow-action-plateau-processor/new-geometry",
  "reearth-flow-action-processor/new-geometry",
  "reearth-flow-action-python-processor/new-geometry",
  "reearth-flow-action-sink/new-geometry",
  "reearth-flow-action-source/new-geometry",
  "reearth-flow-types/new-geometry",
]

[[bin]]
name = "reearth-flow-worker"
path = "src/main.rs"

[[bin]]
name = "reearth-flow-worker-server"
path = "src/bin/server.rs"

[dependencies]
reearth-flow-action-log.workspace = true
reearth-flow-action-plateau-processor.workspace = true
reearth-flow-action-processor.workspace = true
reearth-flow-action-python-processor.workspace = true
reearth-flow-action-sink.workspace = true
reearth-flow-action-source.workspace = true
reearth-flow-common.workspace = true
reearth-flow-runner.workspace = true
reearth-flow-runtime.workspace = true
reearth-flow-state.workspace = true
reearth-flow-storage.workspace = true
reearth-flow-telemetry.workspace = true
reearth-flow-types.workspace = true

axum = "0.7.9"

async-trait.workspace = true
backon = "1.6.0"
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
google-cloud-googleapis = "0.16.1"
google-cloud-pubsub = "0.30.0"
indexmap.workspace = true
json-subscriber.workspace = true
num_cpus.workspace = true
nutype.workspace = true
object_store.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
