[package]
name = "websocket"
version = "0.1.0"
edition = "2021"
description = "Yrs synchronization protocol using Warp web sockets"
license = "MIT"
authors = ["Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
keywords = ["crdt", "yrs", "warp"]
homepage = "https://github.com/y-crdt/yrs-warp/"
repository = "https://github.com/y-crdt/yrs-warp/"
readme = "./README.md"

[lints.clippy]
uninlined_format_args = "allow"


[lib]
name = "websocket"
crate-type = ["cdylib", "rlib"]

[features]
default = ["auth"]
auth = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yrs = { version = "0.25.0", features = ["sync"] }
axum = { version = "0.8.8", features = ["ws"] }
futures-util = "0.3"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "sync", "time", "signal", "macros"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.146"
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-stackdriver = "0.28"
opentelemetry-otlp = { version = "0.31", features = ["tonic", "grpc-tonic"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
dotenv = "0.15"
# lmdb-rs = { version = "0.7" }
thiserror = "2.0.17"
smallvec = { version = "1.15.1", features = [
  "write",
  "union",
  "const_generics",
  "const_new",
] }
anyhow = "1.0.100"
google-cloud-storage = { package="gcloud-storage", version="1.2.0" }
async-trait = "0.1.89"
futures = "0.3"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "registry"] }
hex = "0.4"
dashmap = "6.1.0"
reqwest = { version = "0.12.28", features = ["json"] }
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.9.2"
# thrift = "0.17.0"
time = "0.3.44"
uuid = { version = "1.19.0", features = ["v4"] }
base64 = "0.22.1"
deadpool = { version = "0.12", features = ["managed", "rt_tokio_1"] }
bytes = "1.11.0"
tower = "0.5.2"
scopeguard = "1.2.0"
brotli = "8.0.2"
tower-http = { version = "0.6.8", features = ["compression-br", "cors"] }

[dev-dependencies]
tokio-tungstenite = "0.28.0"
tokio = { version = "1", features = ["full"] }
bytes = "1.11.0"
criterion = { version = "0.8.1", features = ["async"] }
url = "2.5"

[[bench]]
name = "server_bench"
harness = false
