[package]
name = "app"
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["gcs-storage"] 
gcs-storage = [
    "flow-websocket-infra/gcs-storage",
]  
local-storage = [
    "flow-websocket-infra/local-storage",
]


[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
yrs.workspace = true
serde.workspace = true
tokio.workspace = true
tower.workspace = true
serde_json.workspace = true
tower-http.workspace = true
thiserror.workspace = true
redis.workspace = true
dotenv.workspace = true
envy.workspace = true
flow-websocket-services = { workspace = true, default-features = false}
flow-websocket-infra = { workspace = true, default-features = false } 
bb8.workspace = true
bb8-redis.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
url.workspace = true