[package]
description = "Re:Earth Flow examples"
name = "reearth-flow-examples"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

publish = false

[dev-dependencies]
reearth-flow-action-log.workspace = true
reearth-flow-action-universal.workspace = true
reearth-flow-action.workspace = true
reearth-flow-common.workspace = true
reearth-flow-eval-expr.workspace = true
reearth-flow-state.workspace = true
reearth-flow-storage.workspace = true
reearth-flow-workflow-runner.workspace = true
reearth-flow-workflow.workspace = true

bytes.workspace = true
pretty_assertions.workspace = true
rust-embed = "8.3.0"
tempfile.workspace = true
tokio.workspace = true

[[example]]
name = "plateau-integration-tests"
path = "plateau/integration_tests.rs"
