[package]
description = "Re:Earth Flow examples"
name = "reearth-flow-examples"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

publish = false

[dev-dependencies]
reearth-flow-action-log.workspace = true
reearth-flow-action-universal.workspace = true
reearth-flow-action.workspace = true
reearth-flow-common.workspace = true
reearth-flow-eval-expr.workspace = true
reearth-flow-state.workspace = true
reearth-flow-storage.workspace = true
reearth-flow-workflow-runner.workspace = true

bytes.workspace = true
directories.workspace = true
pretty_assertions.workspace = true
time.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true
yaml-include = "0.7.0"

[[example]]
name = "attribute_reader"
path = "plateau/attribute_reader.rs"

[[example]]
name = "xml_validator"
path = "plateau/xml_validator.rs"

[[example]]
name = "domain_of_definition_validator"
path = "plateau/domain_of_definition_validator.rs"
