[package]
description = "Re:Earth Flow Action Python Processor"
name = "reearth-flow-action-python-processor"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
# Temporary migration flag for the new-geometry migration.
# TODO: Remove after migration.
new-geometry = [
  "reearth-flow-geometry/new-geometry",
  "reearth-flow-types/new-geometry",
]

[dependencies]
reearth-flow-common.workspace = true
reearth-flow-geometry.workspace = true
reearth-flow-runtime.workspace = true
reearth-flow-types.workspace = true

indexmap.workspace = true
once_cell.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wait-timeout.workspace = true
