[package]
description = "Re:Earth Flow Action Sink"
name = "reearth-flow-action-sink"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
reearth-flow-action-log.workspace = true
reearth-flow-common.workspace = true
reearth-flow-eval-expr.workspace = true
reearth-flow-geometry.workspace = true
reearth-flow-gltf.workspace = true
reearth-flow-runtime.workspace = true
reearth-flow-state.workspace = true
reearth-flow-storage.workspace = true
reearth-flow-types.workspace = true

flatgeom.workspace = true
kv-extsort = { git = "https://github.com/MIERUNE/kv-extsort-rs.git" }
nusamai-citygml.workspace = true
nusamai-czml.workspace = true
nusamai-gltf.workspace = true
nusamai-plateau.workspace = true
nusamai-projection.workspace = true
nusamai-shapefile.workspace = true

ahash.workspace = true
async-trait.workspace = true
atlas-packer.workspace = true
bincode.workspace = true
bytemuck.workspace = true
byteorder.workspace = true
bytes.workspace = true
cesiumtiles.workspace = true
crossbeam.workspace = true
crossbeam-channel.workspace = true
crossbeam-utils.workspace = true
csv.workspace = true
earcut.workspace = true
flate2.workspace = true
geo-types.workspace = true
geojson.workspace = true
geozero.workspace = true
glam.workspace = true
hashbrown.workspace = true
image.workspace = true
indexmap.workspace = true
itertools.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
petgraph.workspace = true
prost.workspace = true
quick-xml.workspace = true
rayon.workspace = true
regex.workspace = true
rhai.workspace = true
rust_xlsxwriter.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
shapefile.workspace = true
sqlx.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tinymvt.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
bytes.workspace = true
