[package]
description = "Re:Earth Flow Action Source"
name = "reearth-flow-action-source"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
reearth-flow-action-log.workspace = true
reearth-flow-common.workspace = true
reearth-flow-eval-expr.workspace = true
reearth-flow-runtime.workspace = true
reearth-flow-sql.workspace = true
reearth-flow-state.workspace = true
reearth-flow-storage.workspace = true
reearth-flow-types.workspace = true

nusamai-citygml.workspace = true
nusamai-plateau.workspace = true
nusamai-projection.workspace = true

async-trait.workspace = true
async_zip.workspace = true
bytes.workspace = true
csv.workspace = true
futures.workspace = true
geojson.workspace = true
once_cell.workspace = true
petgraph.workspace = true
quick-xml.workspace = true
regex.workspace = true
rhai.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
bytes.workspace = true
